<resources>
    <string name="app_name">GIS_OPTIK_20201</string>
    <string name="ke_1">Pastikan anda memiliki paket data atau terhubung ke wifi</string>
    <string name="ke_2">Pastikan perizinan GPS anda telah aktif</string>
    <string name="ke_3">Pastikan perizinan Phone anda telah aktif</string>
    <string name="ke_4">Pastikan perizinan Phone anda telah aktif</string>
    <string name="ke_5">Pastikan perizinan Camera dan Storage anda telah aktif</string>

    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="ttg">"Aplikasi ini merupakan aplikasi bantuan untuk masyarakat kota Jambi yang merasa kesulitan dalam mencari optik sesuai kebutuhan, sehingga pencarian informasi optik dapat menghemat waktu dan efisien"</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
      AIzaSyDez3fuHPVNfVKp3Ji5dhtiKyEgOCbI0jE</string>
    <string name="password">lupa</string>
</resources>